<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HELPME!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="login">登陆</string>
	<string name="user_name">账号</string>
	<string name="password">密码</string>
	<string name="hint1">请输入您的账号</string>
	<string name="hint2">请输入您的密码</string>
	<string name="imgd">icon</string>
	<string name="SOS">SOS Client</string>
</resources>
